--- a/chrome_extension/frontend/popup.html
+++ b/chrome_extension/frontend/popup.html
@@ -248,7 +248,7 @@
   </head>
   <body>
     <div class="header">
-      <h2>📋 Job Application Tracker</h2>
+      <h2>Job Application Tracker</h2>
       <p>Track your job applications effortlessly</p>
     </div>
 
