--- a/chrome_extension/frontend/popup.html
+++ b/chrome_extension/frontend/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Job Application Tracker</title>
+    <title>Beacon - Job Application Tracker</title>
     <style>
       * {
         box-sizing: border-box;
@@ -10,123 +10,177 @@
       }
 
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
-        min-width: 450px;
-        max-width: 450px;
-        padding: 0;
-        background: linear-gradient(135deg, #10559A 0%, #0d4680 100%);
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Inter', Arial, sans-serif;
+        width: 420px;
+        min-height: 500px;
+        background: #ffffff;
+      }
+
+      .container {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        background: #ffffff;
       }
 
       .header {
-        background: #10559A;
-        color: white;
-        padding: 20px;
+        background: linear-gradient(135deg, #10559A 0%, #3CA2C8 100%);
+        padding: 24px 20px;
         text-align: center;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        border-bottom: 3px solid #F9C6D7;
+      }
+
+      .icon-container {
+        margin-bottom: 12px;
+      }
+
+      .icon-container img {
+        width: 56px;
+        height: 56px;
+        filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.15));
       }
 
       .header h2 {
-        font-size: 20px;
-        font-weight: 600;
-        margin-bottom: 5px;
+        font-size: 22px;
+        font-weight: 700;
+        color: #ffffff;
+        margin-bottom: 4px;
+        letter-spacing: 0.5px;
       }
 
       .header p {
         font-size: 12px;
-        opacity: 0.9;
-      }
-
-      .content {
-        background: white;
-        padding: 20px;
-        max-height: 500px;
-        overflow-y: auto;
-      }
-
-      .status-banner {
-        padding: 12px;
-        border-radius: 8px;
-        margin-bottom: 15px;
-        font-size: 13px;
-        text-align: center;
+        color: rgba(255, 255, 255, 0.9);
         font-weight: 500;
       }
 
+      .content {
+        flex: 1;
+        padding: 24px 20px;
+        overflow-y: auto;
+        background: #ffffff;
+      }
+
+      .status-banner {
+        padding: 16px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        font-size: 14px;
+        text-align: center;
+        font-weight: 600;
+        border: 2px solid;
+      }
+
       .status-banner.job-detected {
-        background: #e8f5e9;
-        color: #2e7d32;
-        border: 1px solid #a5d6a7;
+        background: linear-gradient(135deg, #e8f8f5 0%, #d4f1f4 100%);
+        color: #10559A;
+        border-color: #3CA2C8;
       }
 
       .status-banner.not-job {
-        background: #fff3e0;
-        color: #e65100;
-        border: 1px solid #ffb74d;
+        background: #f9f9f9;
+        color: #666;
+        border-color: #e0e0e0;
+      }
+
+      .status-banner.error {
+        background: linear-gradient(135deg, #ffe5f0 0%, #ffd9e6 100%);
+        color: #DB4C77;
+        border-color: #F9C6D7;
       }
 
       .form-group {
-        margin-bottom: 16px;
+        margin-bottom: 18px;
       }
 
       label {
         display: block;
         font-size: 13px;
         font-weight: 600;
-        color: #333;
-        margin-bottom: 6px;
+        color: #10559A;
+        margin-bottom: 8px;
       }
 
       input[type="text"],
+      input[type="date"],
       input[type="file"],
       textarea {
         width: 100%;
-        padding: 10px 12px;
+        padding: 12px 14px;
         border: 2px solid #e0e0e0;
-        border-radius: 6px;
-        font-size: 13px;
+        border-radius: 8px;
+        font-size: 14px;
         font-family: inherit;
-        transition: border-color 0.2s;
+        transition: all 0.2s ease;
+        background: #ffffff;
       }
 
       input[type="text"]:focus,
+      input[type="date"]:focus,
       input[type="file"]:focus,
       textarea:focus {
         outline: none;
-        border-color: #10559A;
+        border-color: #3CA2C8;
+        background: #f9f9f9;
+        box-shadow: 0 0 0 3px rgba(60, 162, 200, 0.1);
+      }
+
+      input[type="date"] {
+        color: #333;
+        font-weight: 500;
+      }
+
+      input[type="date"]::-webkit-calendar-picker-indicator {
+        cursor: pointer;
+        filter: opacity(0.6);
+      }
+
+      input[type="date"]:hover::-webkit-calendar-picker-indicator {
+        filter: opacity(1);
       }
 
       input[type="text"]:disabled,
       textarea:disabled {
-        background-color: #f5f5f5;
-        color: #666;
+        background-color: #f9f9f9;
+        color: #999;
+        cursor: not-allowed;
       }
 
       textarea {
         resize: vertical;
-        min-height: 80px;
+        min-height: 90px;
         max-height: 150px;
+        line-height: 1.5;
       }
 
       .checkbox-group {
         display: flex;
         align-items: center;
-        gap: 8px;
-        padding: 10px;
+        gap: 10px;
+        padding: 12px 14px;
         background: #f9f9f9;
-        border-radius: 6px;
+        border-radius: 8px;
+        border: 2px solid transparent;
+        transition: all 0.2s ease;
+      }
+
+      .checkbox-group:hover {
+        background: #ffffff;
+        border-color: #F9C6D7;
       }
 
       input[type="checkbox"] {
-        width: 18px;
-        height: 18px;
+        width: 20px;
+        height: 20px;
         cursor: pointer;
-        accent-color: #10559A;
+        accent-color: #DB4C77;
       }
 
       .checkbox-group label {
         margin: 0;
         cursor: pointer;
         font-weight: 500;
+        color: #333;
       }
 
       .skills-container {
@@ -147,47 +201,59 @@
 
       .button-group {
         display: flex;
-        gap: 10px;
-        margin-top: 20px;
+        gap: 12px;
+        margin-top: 24px;
       }
 
       button {
         flex: 1;
-        padding: 12px 16px;
+        padding: 14px 18px;
         border: none;
-        border-radius: 6px;
+        border-radius: 10px;
         font-size: 14px;
         font-weight: 600;
         cursor: pointer;
-        transition: all 0.2s;
+        transition: all 0.2s ease;
       }
 
       #save-btn {
-        background: #10559A;
+        background: linear-gradient(135deg, #10559A 0%, #3CA2C8 100%);
         color: white;
+        box-shadow: 0 2px 8px rgba(16, 85, 154, 0.25);
       }
 
       #save-btn:hover {
-        background: #0d4680;
-        transform: translateY(-1px);
-        box-shadow: 0 4px 12px rgba(16, 85, 154, 0.3);
+        transform: translateY(-2px);
+        box-shadow: 0 4px 16px rgba(16, 85, 154, 0.35);
+      }
+
+      #save-btn:active {
+        transform: translateY(0);
       }
 
       #save-btn:disabled {
-        background: #ccc;
+        background: #e0e0e0;
+        color: #999;
         cursor: not-allowed;
         transform: none;
         box-shadow: none;
       }
 
       #refresh-btn {
-        background: #F9C6D7;
-        color: #c2185b;
+        background: #ffffff;
+        color: #DB4C77;
+        border: 2px solid #F9C6D7;
       }
 
       #refresh-btn:hover {
-        background: #f7b3cc;
-        transform: translateY(-1px);
+        background: #F9C6D7;
+        color: #ffffff;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(249, 198, 215, 0.4);
+      }
+
+      #refresh-btn:active {
+        transform: translateY(0);
       }
 
       .loading {
@@ -195,22 +261,23 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 40px;
-        gap: 15px;
+        padding: 50px 20px;
+        gap: 18px;
       }
 
       .loader {
-        border: 4px solid #f3f3f3;
-        border-top: 4px solid #10559A;
+        border: 4px solid #f9f9f9;
+        border-top: 4px solid #3CA2C8;
         border-radius: 50%;
-        width: 40px;
-        height: 40px;
+        width: 48px;
+        height: 48px;
         animation: spin 1s linear infinite;
       }
 
       .loading-text {
         color: #666;
-        font-size: 13px;
+        font-size: 14px;
+        font-weight: 500;
       }
 
       @keyframes spin {
@@ -219,43 +286,51 @@
       }
 
       .info-text {
-        font-size: 12px;
-        color: #666;
+        font-size: 11px;
+        color: #999;
         font-style: italic;
-        margin-top: 4px;
+        margin-top: 6px;
+        line-height: 1.4;
       }
 
       .success-message {
-        background: #e8f5e9;
-        color: #2e7d32;
-        padding: 12px;
-        border-radius: 6px;
+        background: linear-gradient(135deg, #e8f8f5 0%, #d4f1f4 100%);
+        color: #10559A;
+        padding: 14px;
+        border-radius: 10px;
         text-align: center;
-        font-weight: 500;
-        margin-bottom: 15px;
+        font-weight: 600;
+        margin-top: 16px;
+        border: 2px solid #3CA2C8;
       }
 
       .error-message {
-        background: #ffebee;
-        color: #c62828;
-        padding: 12px;
-        border-radius: 6px;
+        background: linear-gradient(135deg, #ffe5f0 0%, #ffd9e6 100%);
+        color: #DB4C77;
+        padding: 14px;
+        border-radius: 10px;
         text-align: center;
-        font-weight: 500;
-        margin-bottom: 15px;
+        font-weight: 600;
+        margin-top: 16px;
+        border: 2px solid #F9C6D7;
       }
     </style>
   </head>
   <body>
-    <div class="header">
-      <h2>Job Application Tracker</h2>
-      <p>Track your job applications effortlessly</p>
-    </div>
+    <div class="container">
+      <div class="header">
+        <div class="icon-container">
+          <img src="icon.png" alt="Beacon">
+        </div>
+        <h2>Beacon</h2>
+        <p>Your Job Application Navigator</p>
+      </div>
 
-    <div class="content" id="main-content">
-      <div class="loading">
-        <div class="loader"></div>
-        <div class="loading-text">Scanning page for job details...</div>
+      <div class="content" id="main-content">
+        <div class="loading">
+          <div class="loader"></div>
+          <div class="loading-text">Checking page...</div>
+        </div>
       </div>
     </div>
 
